--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@coreui/angular": "^4.7.10",
     "@coreui/coreui": "^4.3.2",
     "@coreui/icons-angular": "^4.7.8",
+    "@videogular/ngx-videogular": "^8.0.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^17.0.10",
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.9",
+    "@types/core-js": "^2.5.8",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
