--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json ./src/assets/i18n/de.json --key-as-default-value --replace --format json",
+    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json ./src/assets/i18n/de.json --clean --format json",
+    "extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +26,8 @@
     "@coreui/angular": "^4.7.10",
     "@coreui/coreui": "^4.3.2",
     "@coreui/icons-angular": "^4.7.8",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@videogular/ngx-videogular": "^8.0.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
@@ -33,8 +38,10 @@
     "@angular-devkit/build-angular": "^17.0.10",
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.9",
+    "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/core-js": "^2.5.8",
     "@types/jasmine": "~5.1.0",
+    "@vendure/ngx-translate-extract": "^9.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
