--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@videogular/ngx-videogular": "^8.0.0",
     "bootstrap": "^5.3.2",
     "cookieconsent": "^3.1.1",
+    "ngx-cookie-service": "^17.1.0",
     "ngx-cookieconsent": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
