--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/@videogular/ngx-videogular/fonts/videogular.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/customTheme.scss"
             ],
             "scripts": []
           },
